# RAT_work

./: .gitignore  README.md  pyproject.toml
docs/: memo.md
prompts/: draft.txt  draft_jp.txt  query.txt  query_jp.txt  revise.txt  revise_jp.txt  system_prompt.txt  system_prompt_jp.txt
python_file/: settings.py  work.py
